# git-first

./: Cargo.toml  README.md  vercel.json
api/: api.rs  index.html
src/: api.rs  cli.rs  lib.rs
