[package]
name = "git-first"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.11.0"
log = "0.4.17"
octocrab = "0.21.0"
redis = { version = "0.29.0", features = ["tokio-rustls-comp"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
vercel_runtime = "1.0.0"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "server"
path = "api/api.rs"
